--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.andreagarcia.flicks">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -19,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MovieDetailsActivity" />
+        <activity android:name=".MovieTrailerActivity"></activity>
     </application>
 
 </manifest>
